name:                mollie-api-haskell
version:             1.0.0.0
synopsis:            Mollie API client for Haskell http://www.mollie.com
description:         Please see README.md
homepage:            https://github.com/matsrietdijk/mollie-api-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Mats Rietdijk
maintainer:          matsrietdijk@gmail.com
copyright:           2016 Mats Rietdijk
category:            Web
build-type:          Simple
-- extra-source-files:
data-files:          data/cacert.pem
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mollie.API
                     , Mollie.API.Types
                     , Mollie.API.Payments
                     , Mollie.API.Refunds
                     , Mollie.API.Methods
                     , Mollie.API.Issuers
                     , Mollie.API.Customers
  other-modules:       Mollie.API.Internal
                     , Paths_mollie_api_haskell
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11 && < 1
                     , time >= 1.5 && < 2
                     , text >= 1.2 && < 2
                     , http-client >= 0.4 && < 0.5
                     , http-client-openssl >= 0.2 && < 0.3
                     , HsOpenSSL >= 0.11 && < 0.12
                     , mtl >= 2.2 && < 3
                     , http-types >= 0.9 && < 1
                     , bytestring >= 0.10 && < 1
  default-language:    Haskell2010

executable mollie
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mollie-api-haskell
                     , text
  default-language:    Haskell2010

test-suite mollie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mollie-api-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsrietdijk/mollie-api-haskell
