name:                mollie-api-examples
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/mollie-api-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mollie-api-examples
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mollie-api-haskell
                     , scotty
                     , text
                     , mtl
                     , uuid
                     , wai
                     , wai-extra
                     , aeson
                     , unordered-containers
                     , directory
                     , lucid
